syntax = "proto3";

import "google/protobuf/empty.proto";

package protos;

option go_package = "github.com/krithikvaidya/distributed-dns/replicated_kv_store/protos";

message RequestVoteMessage {

    int32 term = 1;
    int32 candidateId = 2;
    int32 lastLogIndex = 3;
    int32 lastLogTerm = 4;

}

message RequestVoteResponse {

    int32 term = 1;
    bool voteGranted = 2;

}

message AppendEntriesMessage {

    int32 term = 1;
    int32 leaderId = 2;

    int32 prevLogIndex = 3;
    int32 prevLogTerm = 4;

    repeated int32 entries = 5 [packed=true];

}

message AppendEntriesResponse {

    int32 term = 1;
    bool success = 2;

}

service ConsensusService {

  rpc ReplicaReady(google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc RequestVote(RequestVoteMessage) returns (RequestVoteResponse) {}
  rpc AppendEntries(AppendEntriesMessage) returns (AppendEntriesResponse) {}

}